solution fixed horizontal scroll

--- a/src/css/styles-section/about.css
+++ b/src/css/styles-section/about.css
@@ -7,6 +7,7 @@
   padding: 60px 0;
   max-width: 375px;
   margin: 0 auto;
+  scroll-margin-top: 60px;
 }
 .title-about {
   font-size: 24px;
@@ -27,6 +28,7 @@
   .about {
     padding: 98px 0;
     max-width: 1440px;
+    scroll-margin-top: 90px;
   }
   .title-about {
     font-size: 32px;
