--- a/src/css/styles-section/mobile-menu.css
+++ b/src/css/styles-section/mobile-menu.css
@@ -1,5 +1,5 @@
 .mobile-menu {
-  padding: 5px 0 24px 0;
+  padding: 20px 0 24px 0;
   position: fixed;
   inset: 0;
   transform: translateX(100%);
@@ -7,13 +7,17 @@
   width: 100%;
   height: 100%;
   min-width: 320px;
+  max-width: 375px;
   background-color: #060307;
-
   background-image: url('/img/faq/bg-faq-mob.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  max-width: 375px;
+
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+
   margin: 0 auto;
 
   opacity: 0;
@@ -23,10 +27,12 @@
   .container {
     width: 100%;
     max-width: 320px;
-    padding: 0 5px;
+    /* padding: 0 5px; */
   }
+  /* display: none; */
 }
 .mobile-menu.is-open {
+  /* display: flex; */
   transform: translateX(0);
   opacity: 1;
 }
@@ -53,7 +59,7 @@
   fill: var(--active-color);
 }
 .mm-list-navigation {
-  margin: 0 auto;
+  margin: 20px auto 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
